@@ -4,6 +4,7 @@
  * Fixed code to bind to specific IP addresses -- Code that should be run all time was stuffed in incorrect if block
  * Attempt to fix MP4 audio/video sync code
  * Added new config cc.yoff=xxx (offset from bottom of screen for closed captions, default 24)
+ * Added new config ffmpeg.threads:  Sets number of threads for ffmpeg transcoding (current default=1.  0 which should mean auto(?) crashes my ffmpeg
    
 ===V0.27==
  * fixed bug with overlapping metadata
